--- a/clase1.html
+++ b/clase1.html
@@ -11,5 +11,6 @@
 <button onclick="document.getElementById('demostracion').innerHTML = 'Texto transformado por JS'">Usar javascript</button>
 <script src="script.js"></script>
 <script src="script2.js"></script>
+<script src= "script3.js"></script>
 </body>
 </html>
