--- a/clase2.html
+++ b/clase2.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> EVENTOS: </h1>
+    <p id="seleccionable"></p>
+    <p id="seleccionable2"></p>
+    <button onclick="mostrar()">CLICKEAME</button>
+    <button onmouseover="mostrar2()">Ponete encima mio</button>
     <script src="script10.js"></script>
 </body>
 </html>
