--- a/clase1.html
+++ b/clase1.html
@@ -9,6 +9,12 @@
     <h1>Que es lo que puedo hacer con Javascript?</h1>
     <p id="demostracion">Este texto sera transformado por JS</p>
 <button onclick="document.getElementById('demostracion').innerHTML = 'Texto transformado por JS'">Usar javascript</button>
+<div>
+    <h1>ARRAYS(listas, arreglos)</h1>
+    <ul id="seleccionable">
+        
+    </ul>
+</div>
 <script src="script.js"></script>
 <script src="script2.js"></script>
 <script src="script3.js"></script>
@@ -18,5 +24,7 @@
 <script src="script7.js"></script>
 <script src="script8.js"></script>
 <script src="script9.js"></script>
+<script src="script11.js"></script>
+
 </body>
 </html>
